# Face-detection-system

./: ARCHITECTURE_SUMMARY.md  README.md  face_detection.md
backend/docs/: implement_steps.md  后端架构.md
face_detection/: CMakeLists.txt  CmakeLists.txt  DEPLOYMENT_GUIDE.md  README.md  buidl.sh
face_detection/docs/: face_detection_guide.md
face_detection/include/: face_utils.h
face_detection/models/: RetinaFace.rknn
face_detection/src/: face_aligner.cpp  face_engine.cpp  face_utils.h  retinaface.cpp  utils.cpp
face_detection/utils/: CMakeLists.txt  image_utils.c
face_detection_tool/: .gitignore  README.md  convert_onnx_to_rknn.py  mobilefacenet.rknn  train_modern.py
fronted/template/: base.html  dashboard.html  face_dashboard.html  face_input.html  face_registered.html  login.html
